additional library calls to func

--- a/analysis/05_compareMethodsBcells.Rmd
+++ b/analysis/05_compareMethodsBcells.Rmd
@@ -176,7 +176,7 @@ Examine only the independent contrasts.
 fitSum %>% 
     data.frame %>%
     rename_with(.fn = ~ c("Direction", "Comparison", "Value")) %>%
-    filter(Direction != "NotSig") -> dat
+    dplyr::filter(Direction != "NotSig") -> dat
 
 p <- ggplot(dat, aes(x = Comparison, y = Value, fill = Direction)) +
     geom_bar(stat = "identity", position = "dodge") +
@@ -268,7 +268,7 @@ dat %>% filter(set == "GO") %>%
     mutate(method = unname(dict[method])) %>% 
     inner_join(medCpgEgGo, by = c("ID" = "GO")) -> sub
 
-bins <- rbin_quantiles(sub, ID, med, bins = 11)
+bins <- rbin::rbin_quantiles(sub, ID, med, bins = 11)
 sub$bin <- as.factor(findInterval(sub$med, bins$upper_cut))
 
 binLabs <- paste0("<", bins$upper_cut)
